--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0-rc.3",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
