--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ventura-mystica",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Saiho Apps",
+  "homepage": "https://github.com/saiho/ventura-mystica",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng lint && ng build --configuration=production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -64,5 +65,5 @@
     "ts-node": "~10.4.0",
     "typescript": "~4.4.4"
   },
-  "description": "An Ionic project"
+  "description": "Ventura Mystica: Choose Terra Mystica tiles randomly and setup the board quickly"
 }
