--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular/language-service": "~13.0.2",
     "@capacitor/cli": "3.3.2",
     "@ionic/angular-toolkit": "^5.0.3",
+    "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^16.11.10",
