--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.0.1",
   "author": "Saiho Apps",
   "homepage": "https://github.com/saiho/ventura-mystica",
+  "description": "Ventura Mystica: Help doing Terra Mystica setup by choosing factions and tiles randomly.",
+  "license": "MIT",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "build-prod": "ng lint && ng build --configuration=production",
+    "heroku-postbuild": "ng lint && ng build --configuration=production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@angular/common": "~13.0.3",
     "@angular/core": "~13.0.3",
@@ -29,6 +35,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@types/lodash": "^4.14.177",
+    "express": "^4.17.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
@@ -66,6 +73,5 @@
     "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
     "typescript": "~4.4.4"
-  },
-  "description": "Ventura Mystica: Choose Terra Mystica tiles randomly and setup the board quickly"
+  }
 }
