--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@types/lodash": "^4.14.177",
+    "@types/luxon": "^2.0.7",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "luxon": "^2.1.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
