--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,14 @@
       "files": ["*.html"],
       "extends": ["plugin:@angular-eslint/template/recommended"],
       "rules": {}
+    },
+    {
+      "files": [
+        "scripts/**.js"
+      ],
+      "env": {
+        "es2021": true
+      }
     }
   ]
 }
