--- a/package.json
+++ b/package.json
@@ -20,50 +20,50 @@
     "node": "16.x"
   },
   "dependencies": {
-    "@angular/common": "~13.0.3",
-    "@angular/core": "~13.0.3",
-    "@angular/forms": "~13.0.3",
-    "@angular/platform-browser": "~13.0.3",
-    "@angular/platform-browser-dynamic": "~13.0.3",
-    "@angular/router": "~13.0.3",
-    "@capacitor/app": "1.0.6",
-    "@capacitor/core": "3.3.2",
+    "@angular/common": "~13.1.0",
+    "@angular/core": "~13.1.0",
+    "@angular/forms": "~13.1.0",
+    "@angular/platform-browser": "~13.1.0",
+    "@angular/platform-browser-dynamic": "~13.1.0",
+    "@angular/router": "~13.1.0",
+    "@capacitor/app": "1.0.7",
+    "@capacitor/core": "3.3.3",
     "@capacitor/haptics": "1.1.3",
-    "@capacitor/keyboard": "1.1.3",
+    "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
-    "@ionic/angular": "^6.0.0-rc.4",
+    "@ionic/angular": "^6.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "@types/lodash": "^4.14.177",
+    "@types/lodash": "^4.14.178",
     "@types/luxon": "^2.0.7",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "luxon": "^2.1.1",
+    "luxon": "^2.2.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-devkit/build-angular": "~13.1.1",
     "@angular-eslint/builder": "~13.0.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler": "~13.0.3",
-    "@angular/compiler-cli": "~13.0.3",
-    "@angular/language-service": "~13.0.3",
-    "@capacitor/cli": "3.3.2",
+    "@angular/cli": "~13.1.1",
+    "@angular/compiler": "~13.1.0",
+    "@angular/compiler-cli": "~13.1.0",
+    "@angular/language-service": "~13.1.0",
+    "@capacitor/cli": "3.3.3",
     "@ionic/angular-toolkit": "^5.0.3",
     "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^16.11.12",
-    "@typescript-eslint/eslint-plugin": "5.6.0",
-    "@typescript-eslint/parser": "5.6.0",
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
     "eslint": "^8.4.1",
     "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-jsdoc": "37.1.0",
+    "eslint-plugin-jsdoc": "37.2.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
@@ -76,6 +76,6 @@
     "protractor": "~7.0.0",
     "replace-in-file": "^6.3.2",
     "ts-node": "~10.4.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.5.3"
   }
 }
