--- a/package.json
+++ b/package.json
@@ -20,45 +20,45 @@
     "node": "18.x"
   },
   "dependencies": {
-    "@angular/common": "~13.3.12",
-    "@angular/core": "~13.3.12",
-    "@angular/forms": "~13.3.12",
-    "@angular/platform-browser": "~13.3.12",
-    "@angular/platform-browser-dynamic": "~13.3.12",
-    "@angular/router": "~13.3.12",
-    "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.9.0",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.3",
-    "@capacitor/status-bar": "1.0.8",
+    "@angular/common": "~15.0.4",
+    "@angular/core": "~15.0.4",
+    "@angular/forms": "~15.0.4",
+    "@angular/platform-browser": "~15.0.4",
+    "@angular/platform-browser-dynamic": "~15.0.4",
+    "@angular/router": "~15.0.4",
+    "@capacitor/app": "4.1.1",
+    "@capacitor/core": "4.6.1",
+    "@capacitor/haptics": "4.1.0",
+    "@capacitor/keyboard": "4.1.0",
+    "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.4.1",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@types/lodash": "^4.14.191",
-    "@types/luxon": "^2.4.0",
+    "@types/luxon": "^3.2.0",
     "express": "^4.18.2",
+    "ionicons": "^6.0.4",
     "lodash": "^4.17.21",
-    "luxon": "^2.5.2",
+    "luxon": "^3.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.4.1",
-    "zone.js": "~0.11.8"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.10",
-    "@angular-eslint/builder": "~13.5.0",
-    "@angular-eslint/eslint-plugin": "~13.5.0",
-    "@angular-eslint/eslint-plugin-template": "~13.5.0",
-    "@angular-eslint/template-parser": "~13.5.0",
-    "@angular/cli": "~13.3.10",
-    "@angular/compiler": "~13.3.12",
-    "@angular/compiler-cli": "~13.3.12",
-    "@angular/language-service": "~13.3.12",
-    "@capacitor/cli": "3.9.0",
-    "@ionic/angular-toolkit": "^6.1.0",
+    "@angular-devkit/build-angular": "~15.0.5",
+    "@angular-eslint/builder": "~15.1.0",
+    "@angular-eslint/eslint-plugin": "~15.1.0",
+    "@angular-eslint/eslint-plugin-template": "~15.1.0",
+    "@angular-eslint/template-parser": "~15.1.0",
+    "@angular/cli": "~15.0.5",
+    "@angular/compiler": "~15.0.4",
+    "@angular/compiler-cli": "~15.0.4",
+    "@angular/language-service": "~15.0.4",
+    "@capacitor/cli": "4.6.1",
+    "@ionic/angular-toolkit": "^7.0.0",
     "@ionic/lab": "3.2.15",
     "@types/jasmine": "~4.3.1",
-    "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^17.0.45",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
     "eslint": "^8.31.0",
@@ -73,9 +73,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "protractor": "~7.0.0",
     "replace-in-file": "^6.3.5",
     "ts-node": "~10.9.1",
-    "typescript": "~4.6.4"
+    "typescript": "~4.8.4"
   }
 }
