--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "@ionic/angular": "^6.5.1",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "@types/lodash": "^4.14.191",
+    "@types/lodash-es": "^4.17.6",
     "@types/luxon": "^3.2.0",
     "ionicons": "^6.1.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "luxon": "^3.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.0",
